Fix center layout issue

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -294,7 +294,9 @@ $main-dark: #443d37;
 
 
         @media screen and (max-width: 800px) {
-
+            .buses {
+                justify-content: center;
+            }
 
             .title {
 
