--- a/src/pages/SingleVehicle/single_bus.scss
+++ b/src/pages/SingleVehicle/single_bus.scss
@@ -152,6 +152,7 @@ $main-dark: #443d37;
 @media screen and (max-width: 800px) {
     .main-single-bus {
         padding: 1em 1em;
+        justify-content: center;
 
         hr {
 
